--- a/TurfProjectAPIs/src/main/resources/application.properties
+++ b/TurfProjectAPIs/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=TurfProjectAPIs
 
 ## Spring data source
-spring.datasource.url=jdbc:mysql://localhost:3333/TurfProject
+spring.datasource.url=jdbc:mysql://172.30.164.227/TurfProject
 spring.datasource.username=root
 spring.datasource.password=786$Hiba
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
