--- a/TurfProjectAPIs/src/main/resources/application.properties
+++ b/TurfProjectAPIs/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=TurfProjectAPIs
 
 ## Spring data source
-spring.datasource.url=jdbc:mysql://172.30.164.227/TurfProject
+spring.datasource.url=jdbc:mysql://172.30.164.227/TurfProject?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=786$Hiba
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -14,6 +14,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # Hibernate ddl auto (create,create-drop,validate,update)
 # create when trying to run for the first time
 # change it to update otherwise it will keep on creating new DB
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 #logging.level.org.springframework=DEBUG
