--- a/TurfProjectAPIs/src/main/resources/application.properties
+++ b/TurfProjectAPIs/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=TurfProjectAPIs
 
 ## Spring data source
-spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com/sql12739557
-spring.datasource.username=sql12739557
-spring.datasource.password=6Yw5NxiERu
+spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com/sql7765020
+spring.datasource.username=sql7765020
+spring.datasource.password=udnqrsPX4v
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
